--- a/pom.xml
+++ b/pom.xml
@@ -44,5 +44,10 @@
       <artifactId>selenium-java</artifactId>
       <version>3.0.1</version>
     </dependency>
+    <dependency>
+      <groupId>io.appium</groupId>
+      <artifactId>java-client</artifactId>
+      <version>3.3.0</version>
+    </dependency>
   </dependencies>
 </project>
