implemented testng for some of the tests, instead of junit

--- a/pom.xml
+++ b/pom.xml
@@ -49,5 +49,12 @@
       <artifactId>java-client</artifactId>
       <version>3.3.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>6.8</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 </project>
