--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+          <!--surefire is conflicting with testng command line options and running unwanted tests from junit (need to separate these in the future-->
             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-surefire-plugin</artifactId>
@@ -49,12 +50,6 @@
       <groupId>org.hamcrest</groupId>
       <artifactId>java-hamcrest</artifactId>
       <version>2.0.0.0</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
       <scope>test</scope>
     </dependency>
     <dependency>
