--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,24 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-          <!--surefire is conflicting with testng command line options and running unwanted tests from junit (need to separate these in the future-->
             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-surefire-plugin</artifactId>
               <version>2.21.0</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <!--use this to specify the test suite xml file to run-->
+                        <!--to run a single or selected suites, use
+                        mvn -Dsurefire.suiteXmlFiles=googletestng.xml test
+                        mvn -Dsurefire.suiteXmlFiles=pinteresttestng.xml -Dusername=****@gmail.com -Dpassword=**** test
+                        mvn -Dsurefire.suiteXmlFiles=craigslisttestng.xml,googletestng.xml test
+                        -->
+                        <!-- TestNG suite XML files -->
+                        <suiteXmlFile>craigslisttestng.xml</suiteXmlFile>
+                        <suiteXmlFile>googletestng.xml</suiteXmlFile>
+                        <suiteXmlFile>pinteresttestng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
             </plugin>
         </plugins>
     </build>
